Added /perks info sub command